/**
 * Copyright (C) 2011-2017 Barchart, Inc. <http://www.barchart.com/>
 *
 * All rights reserved. Licensed under the OSI BSD License.
 *
 * http://www.opensource.org/licenses/bsd-license.php
 */

syntax = "proto3";

package org.openfeed;

option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

import "openfeed_instrument.proto";
import "openfeed.proto";

// //////////////////
// Server API
// //////////////////

/// Openfeed Server request
message OpenfeedGatewayRequest {
  oneof data {
    LoginRequest loginRequest = 1;
    LogoutRequest logoutRequest = 2;
    SubscriptionRequest subscriptionRequest = 3;
    InstrumentRequest instrumentRequest = 4;
    InstrumentReferenceRequest instrumentReferenceRequest = 5;
  }
}
/// Openfeed Server Response
message OpenfeedGatewayMessage {
  oneof data {
    LoginResponse loginResponse = 1;
    LogoutResponse logoutResponse = 2;
    InstrumentResponse instrumentResponse = 3;
    InstrumentReferenceResponse instrumentReferenceResponse = 4;
    SubscriptionResponse subscriptionResponse = 5;
    MarketStatus marketStatus = 6;
    HeartBeat heartBeat = 7;
    InstrumentDefinition instrumentDefinition = 8;
    MarketSnapshot marketSnapshot = 9;
    MarketUpdate marketUpdate = 10;
    VolumeAtPrice volumeAtPrice = 11;
    Ohlc ohlc = 12;
  }
}

// ///////////
// Enums
// //////////

enum Result {
  UNKNOWN_RESULT = 0;
  SUCCESS = 1;
  INVALID_SYMBOL = 116;
  INVALID_MARKET_ID = 117;
  INVALID_EXCHANGE = 118;
  INVALID_CHANNEL_ID = 119;
  MALFORMED_MESSAGE = 120;
  UNEXPECTED_MESSAGE = 121;
  NOT_SUBSCRIBED = 122;
  DUPLICATE_SUBSCRIPTION = 123;
  INVALID_CREDENTIALS = 124;
  INSUFFICIENT_PRIVILEGES = 125;    
  AUTHENTICATION_REQUIRED = 126;    
  GENERIC_FAILURE = 127;
}
enum SubscriptionType {
	ALL = 0;
	QUOTE = 1;
	QUOTE_PARTICIPANT = 2;
	DEPTH_PRICE = 3;
	DEPTH_ORDER = 4;
	TRADES = 5;
	CUMLATIVE_VOLUME = 6;
	OHLC = 7;
}

////////////////////
// Serivce Messages
///////////////////
message Status {
  Result result = 1;
  string message = 2;
  Service service = 3;
}

/// Login
message LoginRequest {
  sint64 correlationId = 1;
  string username = 2;
  string password = 3;
}
message LoginResponse {
  sint64 correlationId = 1;
  Status status = 2;
  string token = 3;
}
/// Logout
message LogoutRequest  {
  sint64 correlationId = 1;
  string token = 3;
}
message LogoutResponse {
  sint64 correlationId = 1;
  Status status = 2;
}

/// Instrument Definition(s), will stream InstrumentDefinition(s)
message InstrumentRequest {
  sint64 correlationId = 1;
  string token = 2;
  oneof request {
   string symbol = 10;
   sint64 marketId = 11;
   string exchange = 12;
   sint32 channelId = 13;
  }
}
message InstrumentResponse {
  sint64 correlationId = 1;
  Status status = 2;
  sint32 numberOfDefinitions = 3;
}

/// Instrument References, returns InstrumentReferenceResponse(s)
message InstrumentReferenceRequest {
  sint64 correlationId = 1;
  string token = 2;
  oneof request {
   string symbol = 10;
   sint64 marketId = 11;
   string exchange = 12;
   sint32 channelId = 13;
  }
}
message InstrumentReferenceResponse {
  sint64 correlationId = 1;
  Status status = 2;
  sint32 numberOfDefinitions = 3;
  //
  sint32 channelId = 4;
  sint64 marketId = 5;
  string symbol = 6;
  string exchange = 7;
  string ddfSymbol = 8;
  string ddfExchange = 9; 
  string ddfBaseCode = 10; 
}

/// Subscription Request
message SubscriptionRequest {
  /// Client-assigned id for this request.  Response will include same id
  sint64 correlationId = 1;
  string token = 2;
  /// Preferred service (realtime or delayed).
  Service service = 3;
  bool unsubscribe = 4;
  repeated Request requests = 5;
  message Request {
    oneof data {
       string symbol = 1;
       sint64 marketId = 2;
       string exchange = 3;
       sint32 channelId = 4;
    }
    repeated SubscriptionType subscriptionType = 10;
    /// 0 = send only current snapshot once, else send at interval seconds 
    sint32 snapshotIntervalSeconds = 11;
   }
}
message SubscriptionResponse {
  sint64 correlationId = 1;
  Status status = 2;
  string symbol = 3;
  sint64 marketId = 4;
  string exchange = 5;
  sint32 channelId = 6;
  sint32 numberOfDefinitions = 7;
}



